--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="Novi Wijaya">
 
     <title>(500) Days of Unemployment</title>
     <%= csrf_meta_tags %>
@@ -24,7 +23,7 @@
     <link href="/assets/stylesheets/clean-blog.min.scss" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="vendor/font-awesome/css/font-awesome.min.scss" rel="stylesheet" type="text/css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
@@ -74,10 +73,16 @@
 	    <%= yield %>
 	</div>
 
-    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="app/assets/javascripts/clean-blog.min.js"></script>
 
 </body>
+
+<hr>
+
+<footer class="container-fluid text-center">
+<p>It's ugly and it's crude, I know, but if you take anything from this site without my permission, <br>I will look for you, I will find you, and I will kill you.<br>Okay I won't kill you, but I might sue you.</p>
+</footer>
 
 </html>
