Got rid of font-awesome as it was less than awesome

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
     <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Theme CSS -->
-    <link href="/assets/stylesheets/clean-blog.min.scss" rel="stylesheet">
+    <link href="/clean-blog.min.scss" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -75,14 +75,14 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="app/assets/javascripts/clean-blog.min.js"></script>
+    <script src="/clean-blog.min.js"></script>
 
 </body>
 
 <hr>
 
 <footer class="container-fluid text-center">
-<p>It's ugly and it's crude, I know, but if you take anything from this site without my permission, <br>I will look for you, I will find you, and I will kill you.<br>Okay I won't kill you, but I might sue you.</p>
+<p><small>© 2016 notabum.herokuapp.com All Rights Reserved<br>It's not much of a sophisticated app, I know, but if you take anything from this site without my permission,<br>I will look for you, I will find you, and I will kill you.<br>Okay I won't kill you, but I might sue you.</small></p>
 </footer>
 
 </html>
