--- a/app/views/posts/about.html.erb
+++ b/app/views/posts/about.html.erb
@@ -4,16 +4,18 @@
 
 <h1>About</h1>
 
-<p>Hi, those of you who stumbled into my <strike>blog</strike> <strike>app</strike> blog! I'm Novi, or for those of you who know me, you can call me Dr. Wijaya. That's right, the more you know me, the more I'll annoy you. I went straight into grad school after graduating with a Bachelor of Science (in chemical engineering, though for the life of me I can't figure out why I got a B.Sc instead of a B.Eng... anywaaaaay) and I barely manage to <strike>get out alive</strike> graduate.</p>
-
-<p>So I submitted my thesis at the end of June 2015, then I waited for about three months, defended my thesis around November, <strike>got humiliated</strike> was given constructive criticisms, did some revisions, and officially earned my degree at the end of March 2016. Which means... I'm practically unemployed since July 1st, 2015. That would be more than 500 days of unemployment. But hey, 500 days is catchier than 549 days (or something, you know what I mean)</p>
-
-<p>(And don't worry, this story has a happy(ish) ending; I start work January 3rd, 2017. I won't be a bum forever! *throw confetti*)</p>
-
-<p>I tried to use my time wisely while applying for jobs and going to interviews (translate: I caught up on a lot of sleep), and so I did things that I didn't have time to do before on account of being stuck in the lab for 5.5 years (I'm grateful I still have friends). I learnt swimming, I took a dress making class, I baked, I learnt how to drive, I volunteered at the SPCA, aaand I was lucky to join the TechLadies Bootcamp, where I learnt how to code in 10 weeks.</p>
+<p>Hey you! Yes, you there! Welcome to my <strike>blog</strike> <strike>app</strike> blog! I'm Novi, or for those people lucky enough to know me well, Dr. Wijaya. The short of it is, I built this app as part of my application for the 2nd TechLadies Bootcamp. I called it notabum.herokuapp.com, because tryingnottobeabum.herokuapp.com, strugglingtofindemployment.herokuapp.com, adultingishard.herokuapp.com, and other titles I came up with is kind of too long.</p>
 
 <p>If you're not directed here from TechLadies, how did you come here, why are you here, and are you excited for the new season of Sherlock? I know I am. Also, read about TechLadies at <a href="www.techladies.co">www.techladies.co</a></p>
 
-<p>Long story short, in order to apply to the bootcamp, I had to make an app written in Ruby, and deploy it to the world wide web. To be honest, this isn't the original app I apply with. I wrote an game app in Ruby, sort of like pac-man, but it was written all in Ruby, without the web application framework a.k.a Rails. This means that I'm still figuring out how to deploy said app. So I built this blog, to write about my state of <strike>bum-ness</strike> unemployment, and also because it'd look darn bad if I didn't have an app I can actually show people. =D</p>
+<p>As the title would suggests, I'm currently unemployed. Technically since the end of March 2016, practically since the end of June 2015. Let me explain.</p>
+
+<p>I went straight into grad school after graduating with a Bachelor of Science (in chemical engineering, though for the life of me I can't figure out why I got a B.Sc instead of a B.Eng... anywaaaaay) and I barely manage to <strike>get out alive</strike> graduate. So I submitted my thesis at the end of June 2015, then I waited for about three months, defended my thesis around November, <strike>got humiliated</strike> was given constructive criticisms, did some revisions, and officially earned my degree at the end of March 2016. Which means... I'm practically unemployed since July 1st, 2015, even though I'm technically still a student at NUS. That would amount to more than 500 days of unemployment. But hey, 500 days is catchier than 549 days (or whatever the exact number is, you know what I mean)</p>
+
+<p>(And don't worry, this story has a happy(ish) ending; I start work January 2017. I won't be a bum forever! *throw confetti*)</p>
+
+<p>I tried to use my time wisely while applying for jobs and going to interviews (translate: I caught up on a lot of sleep), and so I did things that I didn't have time to do before on account of being stuck in the lab for 5.5 years (I'm grateful I still have friends). I learnt swimming, I took a dress making class, I baked, I learnt how to drive, I volunteered at the SPCA, aaand I was lucky to join the TechLadies Bootcamp, where I learnt how to code in 10 weeks.</p>
+
+<p>I hope you have fun reading, and leave a comment if it's a nice one!</p>
 
 </div>
