--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -82,7 +82,7 @@
 <hr>
 
 <footer class="container-fluid text-center">
-<p><small>© 2016 notabum.herokuapp.com All Rights Reserved<br>It's not much of a sophisticated app, I know, but if you take anything from this site without my permission,<br>I will look for you, I will find you, and I will kill you.<br>Okay I won't kill you, but I might sue you.</small></p>
+<p><small>© 2016 notabum.herokuapp.com All Rights Reserved<br>It's not much of a sophisticated app, I know, but if you take anything from this site without my permission,<br>somewhere an angel loses its wings</small></p>
 </footer>
 
 </html>
