--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -8,6 +8,6 @@
 	<div class="panel-body">
 		<p><em>Posted at <%= friendly_date post.created_at %></em></p>
 
-		<%= post.body.html_safe %>
+		<%= post.body %>
 	</div>
 </div>
